--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section id="playlist">
       <h2>Playlist</h2>
       <ul>
-        <li>Sample Song 1</li>
-        <li>Sample Song 2</li>
+        <li>Rockstar - Post Malone</li>
+        <li>Rockstar - Roddy Rich</li>
         <li>Sample Song 3</li>
       </ul>
     </section>
