Fix ethers loading and guard UI when unavailable

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lettuce X Trees Dashboard</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js" integrity="sha384-LSsG9H4cxXBErKeIp1eciVBJRLLbC3eLIE2pp8KXgd3ym/DGkhptJKOorW5F63b0" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
   <script defer src="dashboard.js"></script>
 </head>
 <body>
